pdk/1.1/modules/ROOT/pages/policies-pdk-compile-policies.adoc
= Compiling Custom Policies
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

Compile your custom policy to create the policies binary target files by using the `make build` command. You must compile your custom policy after every time you edit the policy's source code before you can deploy the policy to a Flex Gateway.

== Before You Begin

Ensure you have completed all the steps in xref:policies-pdk-create-project.adoc[].

== Compile Using Build Command

To compile the policy, run the `make build` command from the policy's root folder:

[source,ssh]
----
make build
----

The `make build` command preforms the following actions:

. Runs the `make build-asset-files` script
. Runs the `make build` command to compile the policy to a `WebAssembly` binary file
. Generates additional configuration files that are not generated by the `make build-asset-files` script and are required to execute the policy

The `make build` command outputs the generated files to the `target` directories.

You can execute the `make build` command as many times as necessary to generate compiled artifacts. You must compile the custom policy for your source code and configuration edits to be present in the compiled artifacts.

[NOTE]
====
When compiling your policy the first time, Rust fetches the lastest version dependencies. If a dependency requires a Rust version later than {rust-ver-max-var}, pin the latest compatible version of the dependency with this command:

----
cargo update -p <conflicting_crate> --precise <major.minor.patch>
----

====

== See Also

* xref:policies-pdk-debug-local.adoc[]
* xref:policies-pdk-apply-policies.adoc[]
* xref:policies-pdk-troubleshooting.adoc[]
